src/test/ui/nll/closure-requirements/escape-argument-callee.stderr
warning: not reporting region error due to -Znll
  --> $DIR/escape-argument-callee.rs:31:50
   |
31 |         let mut closure = expect_sig(|p, y| *p = y);
   |                                                  ^

error: free region `'_#4r` does not outlive free region `'_#3r`
  --> $DIR/escape-argument-callee.rs:31:45
   |
31 |         let mut closure = expect_sig(|p, y| *p = y);
   |                                             ^^^^^^

note: External requirements
  --> $DIR/escape-argument-callee.rs:31:38
   |
31 |         let mut closure = expect_sig(|p, y| *p = y);
   |                                      ^^^^^^^^^^^^^
   |
   = note: defining type: DefId(0/1:9 ~ escape_argument_callee[317d]::test[0]::{{closure}}[0]) with closure substs [
               i16,
               for<'r, 's, 't0> extern "rust-call" fn((&ReLateBound(DebruijnIndex { depth: 1 }, BrNamed(crate0:DefIndex(0:0), 'r(7666))) mut &ReLateBound(DebruijnIndex { depth: 1 }, BrNamed(crate0:DefIndex(0:0), 's(7667))) i32, &ReLateBound(DebruijnIndex { depth: 1 }, BrNamed(crate0:DefIndex(0:0), 't0(7668))) i32))
           ]
   = note: number of external vids: 1

note: No external requirements
  --> $DIR/escape-argument-callee.rs:25:1
   |
25 | / fn test() {
26 | |     let x = 44;
27 | |     let mut p = &x;
28 | |
...  |
37 | |     deref(p);
38 | | }
   | |_^
   |
   = note: defining type: DefId(0/0:3 ~ escape_argument_callee[317d]::test[0]) with substs []

error: aborting due to previous error

